@@ -12,40 +12,3 @@ Test MD used where available
 79d58'00.000"W 36d58'00.000"N 0.0	79d57'59.128"W	36d58'0.501"N 0.000
 79d58'00.000"W 37d02'00.000"N 0.0	79d57'59.126"W	37d2'0.501"N 0.000
 79d58'00.000"W 36d58'00.000"N 0.0	79d57'59.128"W	36d58'0.501"N 0.000
-##############################################################
-Test raw ellipse to raw ellipse
-79d58'00.000"W 37d02'00.000"N 0.0	79d58'W	37d2'N 0.000
-79d58'00.000"W 36d58'00.000"N 0.0	79d58'W	36d58'N 0.000
-##############################################################
-Test NAD27 to raw ellipse
-79d00'00.000"W 35d00'00.000"N 0.0	79dW	35dN 0.000
-##############################################################
-Between two 3parameter approximations on same ellipsoid
-0d00'00.000"W 0d00'00.000"N 0.0	0dE	0dN 4.000
-79d00'00.000"W 45d00'00.000"N 0.0	78d59'59.821"W	44d59'59.983"N 0.540
-##############################################################
-3param to raw ellipsoid on same ellipsoid
-0d00'00.000"W 0d00'00.000"N 0.0	0dE	0dN 0.000
-79d00'00.000"W 45d00'00.000"N 0.0	79dW	45dN 0.000
-##############################################################
-Test simple prime meridian handling.
-0d00'00.000"W 0d00'00.000"N 0.0	1dW	0dN 0.000
-79d00'00.000"W 45d00'00.000"N 0.0	80dW	45dN 0.000
-##############################################################
-Test simple prime meridian handling within a projection.
-500000 3000000	113dW	27d7'20.891"N 0.000
-##############################################################
-Test geocentric x/y/z generation.
-0d00'00.000"W 0d00'00.000"N 0.0	6378137.00	-0.00 0.00
-0d00'00.000"W 0d00'00.000"N 10.0	6378147.00	-0.00 0.00
-79d00'00.000"W 45d00'00.000"N 0.0	861996.98	-4434590.01 4487348.41
-0d00'00.000"W 90d00'00.000"N 0.0	0.00	-0.00 6356752.31
-##############################################################
-Test geocentric x/y/z consumption.
-6378137.00      -0.00 0.00	0dE	0dN 0.000
-6378147.00      -0.00 0.00	0dE	0dN 10.000
-861996.98       -4434590.01 4487348.41	79dW	45dN 0.001
-0.00    -0.00 6356752.31	0dE	90dN -0.004
-##############################################################
-Test stere projection (re: win32 ticket 12)
-105 40	5577808.93	1494569.40 0.00
